--- a/InventoryManagement/Utilities/DataTeamplate.xaml
+++ b/InventoryManagement/Utilities/DataTeamplate.xaml
@@ -6,8 +6,8 @@
         <view:Home />
     </DataTemplate>
 
-    <DataTemplate DataType="{x:Type vm:CustomerVM}">
-        <view:Customers />
+    <DataTemplate DataType="{x:Type vm:SupplierVM}">
+        <view:Suppliers />
     </DataTemplate>
 
     <DataTemplate DataType="{x:Type vm:ProductVM}">
