--- a/InventoryManagement/App.xaml
+++ b/InventoryManagement/App.xaml
@@ -4,7 +4,7 @@
              xmlns:Icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
              xmlns:theme="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2"
              xmlns:local="clr-namespace:InventoryManagement"
-             StartupUri="ManagerWindow.xaml">
+             StartupUri="Login.xaml">
 
     <Application.Resources>
         <ResourceDictionary>
