--- a/InventoryManagement/Dialog/ProductDetail.xaml
+++ b/InventoryManagement/Dialog/ProductDetail.xaml
@@ -4,7 +4,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:view="clr-namespace:InventoryManagementGUI.View"
-        xmlns:local="clr-namespace:InventoryManagementGUI.Dialog"
+        xmlns:local="clr-namespace:InventoryManagementGUI.Dialog" 
+        xmlns:viewmodel="clr-namespace:InventoryManagementGUI.ViewModel" 
+        d:DataContext="{d:DesignInstance Type=viewmodel:ProductDetailDialog}"
         mc:Ignorable="d"
         Title="ProductDetail" Height="450" Width="600"
         WindowStartupLocation="CenterScreen"
@@ -32,9 +34,10 @@
             <view:MyTextBox x:Name="txtPrice" Grid.Row="2" Grid.Column="0" Caption="Price" Hint="Enter product price"/>
             <view:MyTextBox x:Name="txtDescription" Grid.Row="2" Grid.Column="1" Caption="Description" Hint="Enter product description"/>
 
-            <view:MyTextBox x:Name="txtImage" Grid.Row="3" Grid.Column="0" Caption="Image Path" Hint="Enter product image"/>
-            <view:MyComboBox x:Name="cboSupplier" Grid.Row="3" Grid.Column="1" Caption="Supllier" />
+            <view:MyTextBox x:Name="txtImage" Grid.Row="3" Grid.Column="0" Caption="Image Path" Hint="Enter product image" />
 
+            <view:MyComboBox x:Name="cboSupplier" Grid.Row="3" Grid.Column="1" Caption="Supllier"/>
+    
             <Button Style="{StaticResource removeButton}" Grid.Row="4" Grid.Column="0" Margin="0 0 10 0" Click="btn_Cancel" >
                 <StackPanel Orientation="Horizontal">
                     <TextBlock  Text="Cancel"/>
