--- a/InventoryManagement/ManagerWindow.xaml
+++ b/InventoryManagement/ManagerWindow.xaml
@@ -101,19 +101,29 @@
                     <!--// Settings //-->
 
                     <Menu:Btn Style="{StaticResource BtnStyle}"
-                       Command="{Binding SettingsCommand}">
-
-                        <Grid>
-
-                            <Image Source="Images/img_setting.png"
-                            Style="{StaticResource Image_Style}" />
-
-                            <TextBlock Text="Settings"
-                                Style="{StaticResource Text_Style}" />
-
-                        </Grid>
+                       >
 
                     </Menu:Btn>
+                    <Menu:Btn Style="{StaticResource BtnStyle}"
+                        >
+
+                    </Menu:Btn>
+                    <Menu:Btn Style="{StaticResource BtnStyle}"
+                         >
+
+                    </Menu:Btn>
+
+                    <Menu:Btn Style="{StaticResource BtnStyle}" Click="btn_LogOut" >
+                        <Grid>
+
+                            <Image Source="Images/logout_img.png"
+                             Style="{StaticResource Image_Style}" />
+
+                            <TextBlock Text="Logout"
+                                 Style="{StaticResource Text_Style}" />
+                        </Grid>
+                    </Menu:Btn>
+                    
 
                 </StackPanel>
 
@@ -133,4 +143,5 @@
          Click="CloseApp_Click" />
 
     </Grid>
+    
 </Window>
