--- a/InventoryManagement/View/Products.xaml
+++ b/InventoryManagement/View/Products.xaml
@@ -37,7 +37,7 @@
 
                 <TextBox Name="textBoxSearch" Style="{DynamicResource searchTextbox}"/>
 
-                <Button Width="15" Height="15" VerticalAlignment="Center" Margin="0 0 15 0" BorderBrush="Transparent" Foreground="Transparent" HorizontalAlignment="Right" Click="btn_SearchByName">
+                <Button Width="20" Height="20" VerticalAlignment="Center" Margin="0 0 15 0" BorderBrush="Transparent" Foreground="Transparent"  Background="{x:Null}"  HorizontalAlignment="Right" Click="btn_SearchByName">
                     <Icon:PackIconMaterial Kind="Magnify" Foreground="#B0B9C6" Width="15" Height="15"  />
                 </Button>
             </Grid>
@@ -46,7 +46,7 @@
             <TextBlock Text="Product" Grid.Row="1" FontSize="32" FontWeight="SemiBold" Margin="0 20 0 0" Foreground="#121518" HorizontalAlignment="Left"/>
 
             <!--Cart-->
-            <Button Style="{StaticResource cartButton}">
+            <Button Style="{StaticResource cartButton}" Click="btn_ShowCartItem">
                 <StackPanel Orientation="Horizontal">
                     <Icon:PackIconMaterial Kind="Cart" VerticalAlignment="Center" Margin="0 1 8 0" Width="11" Height="11"/>
                     <TextBlock x:Name="txtNumberCart" Text="{Binding ProductInCart}"/>
@@ -57,21 +57,10 @@
             <Separator Height="1" Grid.Row="3" Background="#DAE2EA" Margin="0 -1 0 10"/>
 
             <!--Counter Title-->
-            <TextBlock Text="Staff" Grid.Row="4" FontSize="18" FontWeight="SemiBold" Foreground="#121518" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-
-            <TextBlock Text="Filter by" Grid.Row="4" FontSize="13" FontWeight="SemiBold" Margin="0 0 215 0" Foreground="#121518" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-
-            <!--Filter Textbox-->
-            <Grid Width="200" HorizontalAlignment="Right" Grid.Row="4">
-                <TextBlock Margin="15 0" VerticalAlignment="Center" Foreground="#B0B9C6" IsHitTestVisible="False"
-                        Panel.ZIndex="1" Text="Search in Product ..."
-                        Visibility="{Binding ElementName=textBoxFilter, Path=Text.IsEmpty, Converter={StaticResource BoolToVis}}" />
-
-                <TextBox Name="textBoxFilter" Style="{StaticResource filterTextBox}"/>
-            </Grid>
+            <TextBlock Text="List Product" Grid.Row="4" FontSize="18" FontWeight="SemiBold" Foreground="#121518" HorizontalAlignment="Left" VerticalAlignment="Center"/>
 
             <!--Members Data Grid-->
-            <DataGrid ItemsSource="{Binding ProductDataGrid}" RowStyle="{DynamicResource DataGridRowStyle1}" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}" x:Name="productDataGrid" Style="{DynamicResource DataGridStyle1}">
+            <DataGrid ItemsSource="{Binding ProductDataGrid}" RowStyle="{DynamicResource DataGridRowStyle1}" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}" x:Name="productDataGrid" Style="{DynamicResource DataGridStyle1}" Margin="0,10,0,60" Grid.RowSpan="2" Grid.Row="5">
                 <DataGrid.Columns>
                     <DataGridCheckBoxColumn Header="C" CanUserResize="False" Width="auto" ElementStyle="{StaticResource CheckBoxStyle1}">
                         <DataGridCheckBoxColumn.HeaderTemplate>
@@ -119,11 +108,9 @@
                     <Button Style="{StaticResource pagingButton}" Content="2" Click="btn_PagingClick"  />
                     <Button Style="{StaticResource pagingButton}" Content="3" Click="btn_PagingClick" />
 
-                    <TextBlock Text="..." Foreground="#6C7682" VerticalAlignment="Center" Margin="10 0" FontSize="15"/>
-
-                    <Button Style="{StaticResource pagingButton}" Content="7"/>
-                    <Button Style="{StaticResource pagingButton}" Content="8"/>
-                    <Button Style="{StaticResource pagingButton}" Content="9"/>
+                    <Button Style="{StaticResource pagingButton}" Content="4" Click="btn_PagingClick"/>
+                    <Button Style="{StaticResource pagingButton}" Content="5" Click="btn_PagingClick"/>
+                    <Button Style="{StaticResource pagingButton}" Content="6" Click="btn_PagingClick"/>
 
                     <Rectangle Width="1" Fill="#DEE4EC" Margin="3 7"/>
                     <Button Style="{StaticResource pagingButton}">
